--- a/pom.xml
+++ b/pom.xml
@@ -14,10 +14,12 @@
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 
+
     <parent>
         <groupId>org.basepom</groupId>
         <artifactId>basepom-oss</artifactId>
         <version>19</version>
+        <relativePath/>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
@@ -43,12 +45,6 @@
         </license>
     </licenses>
 
-    <scm>
-        <connection>scm:git:git://github.com/jdbi/jdbi.git</connection>
-        <developerConnection>scm:git:git@github.com:jdbi/jdbi.git</developerConnection>
-        <url>https://github.com/jdbi/jdbi/</url>
-      <tag>jdbi-2.78</tag>
-  </scm>
 
     <developers>
         <developer>
@@ -79,10 +75,9 @@
     </developers>
 
     <properties>
-        <project.build.targetJdk>1.8</project.build.targetJdk>
+        <project.build.targetJdk>17</project.build.targetJdk>
         <basepom.maven.version>2.0.9</basepom.maven.version>
-        <dep.antlr.version>3.4</dep.antlr.version>
-        <dep.spring.version>3.0.0.RELEASE</dep.spring.version>
+        <dep.antlr.version>3.5.3</dep.antlr.version>
         <basepom.check.fail-all>true</basepom.check.fail-all>
         <basepom.check.skip-checkstyle>true</basepom.check.skip-checkstyle>
 
@@ -95,14 +90,7 @@
         <dependency>
             <groupId>net.bytebuddy</groupId>
             <artifactId>byte-buddy</artifactId>
-            <version>1.11.6</version>
-        </dependency>
-
-        <dependency>
-            <groupId>cglib</groupId>
-            <artifactId>cglib</artifactId>
-            <version>3.2.2</version>
-            <scope>test</scope>
+            <version>1.14.8</version>
         </dependency>
 
         <dependency>
@@ -121,34 +109,14 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
-            <optional>true</optional>
+            <scope>test</scope>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-beans</artifactId>
-            <version>${dep.spring.version}</version>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>${dep.spring.version}</version>
-            <optional>true</optional>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-tx</artifactId>
-            <version>${dep.spring.version}</version>
-            <optional>true</optional>
-        </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.12</version>
+            <version>1.7.36</version>
             <optional>true</optional>
         </dependency>
 
@@ -186,14 +154,8 @@
         <dependency>
             <groupId>org.easymock</groupId>
             <artifactId>easymock</artifactId>
-            <version>3.3</version>
+            <version>5.2.0</version>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>cglib</groupId>
-                    <artifactId>cglib-nodep</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
 
         <dependency>
@@ -207,13 +169,6 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-jexl</artifactId>
             <version>2.1.1</version>
-            <scope>test</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-test</artifactId>
-            <version>${dep.spring.version}</version>
             <scope>test</scope>
         </dependency>
 
