--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.basepom</groupId>
         <artifactId>basepom-oss</artifactId>
-        <version>19</version>
+        <version>55</version>
         <relativePath/>
     </parent>
 
@@ -76,7 +76,6 @@
 
     <properties>
         <project.build.targetJdk>17</project.build.targetJdk>
-        <basepom.maven.version>2.0.9</basepom.maven.version>
         <dep.antlr.version>3.5.3</dep.antlr.version>
         <basepom.check.fail-all>true</basepom.check.fail-all>
         <basepom.check.skip-checkstyle>true</basepom.check.skip-checkstyle>
@@ -96,7 +95,7 @@
         <dependency>
             <groupId>com.fasterxml</groupId>
             <artifactId>classmate</artifactId>
-            <version>1.1.0</version>
+            <version>1.5.1</version>
         </dependency>
 
         <dependency>
@@ -286,7 +285,7 @@
                             <goal>shade</goal>
                         </goals>
                         <configuration>
-                            <createDependencyReducedPom>true</createDependencyReducedPom>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
                             <shadedArtifactAttached>false</shadedArtifactAttached>
                             <artifactSet>
                                 <includes>
@@ -297,12 +296,13 @@
                             <relocations>
                                 <relocation>
                                     <pattern>org.antlr.runtime</pattern>
-                                    <shadedPattern>org.skife.jdbi.org.antlr.runtime</shadedPattern>
+                                    <shadedPattern>org.skife.jdbi.antlr.runtime</shadedPattern>
                                 </relocation>
 
                                 <relocation>
+
                                     <pattern>com.fasterxml.classmate</pattern>
-                                    <shadedPattern>org.skife.jdbi.com.fasterxml.classmate</shadedPattern>
+                                    <shadedPattern>org.skife.jdbi.classmate</shadedPattern>
                                 </relocation>
                             </relocations>
                         </configuration>
