--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,7 @@
         <dep.antlr.version>3.5.3</dep.antlr.version>
         <basepom.check.fail-all>true</basepom.check.fail-all>
         <basepom.check.skip-checkstyle>true</basepom.check.skip-checkstyle>
+        <basepom.check.skip-spotbugs>true</basepom.check.skip-spotbugs>
 
         <basepom.test.fork-count>8</basepom.test.fork-count>
         <basepom.test.timeout>120</basepom.test.timeout>
